# EFI-Experiments

./: .gitignore
efi-skeleton/: CMakeLists.txt  build.sh  run.sh
